# qBoard

./: .gitignore  Cargo.toml  README.md  debugging notes.txt  logo  qBoard.sh  qboard.bindings  qboard.man  shell.nix
src/: main.rs
